@@ -463,6 +463,7 @@ C_LIB = \
 	time_weekday.o \
 	uio_readv.o \
 	uio_writev.o \
+	ulimit_ulimit.o \
 	unistd_access.o \
 	unistd_chdir.o \
 	unistd_chdir_exit.o \
@@ -512,6 +513,8 @@ UNIX_LIB = \
 	getopt_getopt_long.o \
 	mount_convertinfo.o \
 	mount_statfs.o \
+	resource_getrlimit.o \
+	resource_setrlimit.o \
 	stat_chmod.o \
 	stat_fstat.o \
 	stat_lstat.o \
