@@ -1,4 +1,5 @@
-- Added ftime(), as contributed by Peter Bengtsson. Thank you very much!
+- Added ftime(), ulimit(), getrlimit() and setrlimit() as contributed by
+  Peter Bengtsson. Thank you very much!
 
 - Added the missing S_ISSOCKET() macro to <sys/stat.h>. Note that this
   is not actually a POSIX feature.
